--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nestjs-blog-post-app",
   "version": "0.0.1",
-  "description": "",
+  "description": "This is the simple blog-post-comment demo, demonstrating features of NestJs Framework.",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -14,12 +14,12 @@
     "start:prod": "cross-env NODE_ENV=production node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "cross-env NODE_ENV=test jest --runInBand",
-    "test:watch": "jest --watch --runInBand",
+    "test:watch": "cross-env NODE_ENV=test jest --watch --runInBand",
     "test:cov": "jest --coverage --runInBand",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
     "prepare": "husky install",
-    "gen-documentation": "npx @compodoc/compodoc -p tsconfig.json -s"
+    "gen-docs": "npx @compodoc/compodoc -p tsconfig.json -s"
   },
   "lint-staged": {
     "src/**/*.ts": [
@@ -29,12 +29,12 @@
   },
   "dependencies": {
     "@liaoliaots/nestjs-redis": "^9.0.5",
-    "@nestjs/common": "^9.4.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.4.0",
-    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/common": "^9.4.3",
+    "@nestjs/config": "^2.3.4",
+    "@nestjs/core": "^9.4.3",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/platform-express": "^9.4.3",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
@@ -42,25 +42,26 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "helmet": "^6.1.5",
+    "helmet": "^6.2.0",
     "hpp": "^0.2.3",
     "ioredis": "^5.3.2",
-    "joi": "^17.9.1",
+    "joi": "^17.9.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.10.0",
+    "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
-    "typeorm": "^0.3.15"
+    "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.6",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "^1.1.19",
-    "@nestjs/cli": "^9.4.2",
-    "@nestjs/schematics": "^9.1.0",
-    "@nestjs/testing": "^9.4.0",
+    "@compodoc/compodoc": "^1.1.21",
+    "@nestjs/cli": "^9.5.0",
+    "@nestjs/schematics": "^9.2.0",
+    "@nestjs/testing": "^9.4.3",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -73,20 +74,20 @@
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "eslint": "^8.39.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
     "jest": "29.5.0",
-    "lint-staged": "^13.2.1",
+    "lint-staged": "^13.2.3",
     "node-mocks-http": "^1.12.2",
     "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "29.0.5",
-    "ts-loader": "^9.4.2",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.2.0",
     "typescript": "^4.9.5"
